<resources>
    <string name="app_name">OHealth Management</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_steps">Steps</string>
    <string name="nav_sleep">Sleep</string>
    <string name="nav_diet">Diet</string>
    <string name="nav_medication">Medication</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Steps</item>
        <item>Sleep</item>
        <item>Diet</item>
        <item>Medication</item>
        <item>Settings</item>
    </string-array>


    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>


    <string name="action_settings">Settings</string>

    <string name="section_format">Hello World from section: %1$d</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="goal">Goal</string>
    <string name="step_size">Step size</string>
    <string name="about">About</string>
    <string name="account">Account</string>
    <string name="goal_summary">Current goal: %,d steps</string>
    <string name="step_size_summary">Current step size: %1$.2f %2$s</string>
    <string name="sign_in">Sign in with your Google account to use the Achievements and Leaderboards features</string>
    <string name="signed_in">Signed in as %s</string>
    <string name="export_summary">Save your data in a .csv file</string>
    <string name="export_title">Export/Backup</string>
    <string name="import_summary">Imports previously saved data</string>
    <string name="import_title">Import/Restore</string>
    <string name="notification">Show notification</string>
    <string name="set_goal">Set goal</string>
    <string name="set_step_size">Set step size</string>
    <string name="sign_out">Sign out</string>
    <string name="file_cant_read">Error: %s can not be read</string>
    <string name="error_file">Error accessing the file: %s</string>
    <string name="error_external_storage_not_available">Error: External storage not available</string>
    <string name="data_saved">Data saved in %s</string>
    <string name="entries_imported">%d entries imported</string>
    <string name="entries_ignored">%d entries were ignored as they did not contain valid data</string>
    <string name="entries_skipped">%d entries were skipped as there already exists data for these days</string>
    <string name="sign_in_necessary">Sign in necessary</string>
    <string name="please_sign_in_with_your_google_account">Please sign in with your Google+ account to use this feature.</string>
    <string name="steps">steps</string>
    <string name="text_color">Text color:</string>
    <string name="background_color">Background color:</string>
    <string name="settings">Settings</string>
    <string name="achievements">Achievements</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="faq">FAQ</string>
    <string name="goal_reached_notification">Goal reached! %s steps and counting</string>
    <string name="notification_text">%s steps to go</string>
    <string name="total">Total</string>
    <string name="notification_title">Pedometer is counting</string>
    <string name="your_progress_will_be_shown_here_soon">Your progress will be shown here soon</string>
    <string name="average">Average</string>
    <string name="record">Record</string>
    <string name="total_last_7_days">Total last 7 days</string>
    <string name="average_last_7_days">Average last 7 days</string>
    <string name="total_this_month">Total this month</string>
    <string name="average_this_month">Average this month</string>
    <string name="file_already_exists">File already exists. Are you sure you want to overwrite it?</string>
    <string name="about_text_links">This app was created by Thomas Hoffmann (<a href="https://www.j4velin.de">www.j4velin.de</a>) and uses <a href="https://github.com/blackfizz/EazeGraph">EazeGraph</a> by Paul Cech and <a href="https://github.com/attenzione/android-ColorPickerPreference">ColorPickerPreference</a> by Sergey Margaritov.\n\nPedometer is open source! Get the code and the full list of contributors from <a href="https://github.com/j4velin/Pedometer">GitHub</a>.\n\n</string>
    <string name="about_app_version">App version: %s</string>
    <string name="since">Since %s</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="close">close</string>
    <string name="no_split_active">No split counter active. Click start to count the steps from now on</string>
    <string name="split_count">Split count</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="ispaused">Pedometer is paused</string>
    <string name="pause_on_power_title">Pause while charging</string>
    <string name="pause_on_power_summary">Pause Pedometer while device is charging</string>
    <string name="no_sensor">Sensor not found</string>
    <string name="no_sensor_explain">This app requires a dedicated hardware step sensor - which your device does not have. This app won\'t run on your device.</string>
    <string name="permission_external_storage">No permission to access external storage</string>

</resources>
